checked code for functionality

--- a/src/imagenet_probes/101_eval_error_bars.ipynb
+++ b/src/imagenet_probes/101_eval_error_bars.ipynb
@@ -38,8 +38,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from paths import IMAGENET_VAL_DIR\n",
-    "BASE_DIR = os.path.dirname(os.path.dirname(os.path.abspath(\"src\")))\n",
+    "from paths import IMAGENET_VAL_DIR, MODEL_DIR\n",
     "DEVICE = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")\n",
     "BATCH_SIZE = 64\n",
     "\n",
@@ -87,14 +86,14 @@
     "    else:\n",
     "        classifier_filename = f\"{variant}_classifier_probeseed_{probe_seed}.pt\"\n",
     "    \n",
-    "    classifier_path = os.path.abspath(classifier_filename)\n",
+    "    classifier_path = os.path.join(\"probes\", classifier_filename)\n",
     "    if not os.path.exists(classifier_path):\n",
     "        print(f\"Warning: Classifier not found at {classifier_path}\")\n",
     "        return None, None\n",
     "\n",
     "    if variant.startswith(\"raptor\"):\n",
     "        try:\n",
-    "            raptor_model_path = find_raptor_checkpoint(variant, model_seed, BASE_DIR)\n",
+    "            raptor_model_path = find_raptor_checkpoint(variant, model_seed, MODEL_DIR)\n",
     "            print(f\"Loading Raptor backbone from: {raptor_model_path}\")\n",
     "        except Exception as e:\n",
     "            print(f\"Error locating Raptor checkpoint: {e}\")\n",
@@ -185,7 +184,7 @@
     "                         # Using metric from 101_eval\n",
     "                         current_r2 = r2_score(a_pred.reshape(-1, a_pred.size(3)), a_dino.reshape(-1, a_dino.size(3)))\n",
     "                         r2s += current_r2 * batch_size\n",
-    "                                \n",
+    "\n",
     "    avg_acc = accs / num_samples\n",
     "    if is_raptor:\n",
     "        avg_r2 = r2s / num_samples\n",
